added diagram creator, and embedding search
